--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@ng-select/ng-select": "^5.0.1",
     "bulma": "^0.9.0",
     "ngx-bar-rating": "^1.1.0",
+    "ngx-ui-loader": "^9.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
